@startuml
!theme plain
skinparam class {
  borderColor #007ACC
  backgroundColor #DDEEFF
  arrowColor #005588
}
title DependanceBuilder - Architecture Classes (Version "Graph First" + Exclusions)

' ================================================
' ===        CLASSE PRINCIPALE (REFACTORISÉE)   ===
' ================================================
class DependanceBuilder <<SERVICE SUGGESTIONS>> {
  -MetierService _metierService
  __Méthode Publique Principale__
  +ObtenirDependancesPourTache(Tache tache, List<Tache> contexteTaches) : List<DependanceAffichage>
  __Méthodes Privées Architecture "Graph First"__
  -ConstruireGrapheBloc(List<Tache> taches) : BidirectionalGraph<string,Edge<string>>
  -CalculerTousLesSuccesseurs(graphe, taches) : Dictionary<string,HashSet<string>>
  -ExploreerSuccesseurs(graphe, tacheId, successeurs, visite) : void
  -FiltrerCandidatsValides(tache, contexteTaches, successeurs) : List<Tache>
  __Méthodes Suggestions Métier + Exclusions__
  -AppliquerSuggestionsMetier(tache, candidatsValides) : HashSet<string>
  -TrouverMeilleuresTachesPourSuggestion(tachesDuMetier, toutesLesTaches) : List<Tache>
  -TrouverFinsDeChaineDuMetier(tachesDuMetier) : List<Tache>
  -RemonterChainePrerequis(metierId, metiersPresents) : HashSet<string>
  __Méthodes Utilitaires__
  -ParseDependances(string dependancesStr) : HashSet<string>
  -ClassifierDependances(candidats, strictes, excluses, suggestions) : List<DependanceAffichage>
}

' ================================================
' ===           CLASSES DTO/UTILITAIRES         ===
' ================================================
class DependanceAffichage <<DTO>> {
  +Tache TachePredecesseur
  +EtatDependance Etat  
  +bool EstHeritee
  +ToString() : string
}

enum EtatDependance {
  Neutre
  Suggeree  
  Stricte
  Exclue
}

' ================================================
' ===      DÉPENDANCES EXTERNES (EXISTANTES)    ===
' ================================================
class MetierService <<EXISTANT>> {
  +GetPrerequisForMetier(string metierId) : IReadOnlyList<string>
  +GetTransitivePrerequisites(string metierId) : HashSet<string>
  +GetAllMetiers() : IReadOnlyList<Metier>
}

class TacheService <<EXISTANT>> {
  +ModifierTache(Tache tacheModifiee) : void
  +ObtenirTachesParBloc(string blocId) : List<Tache>
}

class Tache <<EXISTANT>> {
  +string TacheId
  +string TacheNom  
  +string MetierId
  +string Dependencies
  +string ExclusionsDependances
  +string BlocId
  +string LotId
  +TypeActivite Type
  +bool EstJalon
}

enum TypeActivite <<EXISTANT>> {
  Tache
  JalonUtilisateur
  JalonDeSynchronisation
  JalonTechnique
}

class "QuikGraph.BidirectionalGraph" as BidirectionalGraph <<LIBRARY>> {
  +AddVertex(string vertex) : bool
  +AddEdge(Edge<string> edge) : bool  
  +InEdges(string vertex) : IEnumerable<Edge<string>>
  +OutEdges(string vertex) : IEnumerable<Edge<string>>
}

' ================================================
' ===              UI INTERFACE                 ===
' ================================================
class TacheDetailForm <<UI>> {
  -ToolTip _tooltip
  +ChargerListeDependances() : void
  +chkListDependances_MouseMove(sender, e) : void
  -SauvegarderModifications() : void
  -GetEtatDescription(EtatDependance etat) : string
}

' ================================================
' ===                RELATIONS                   ===
' ================================================
TacheDetailForm --> DependanceBuilder : utilise
DependanceBuilder --> MetierService : consulte prérequis
DependanceBuilder --> BidirectionalGraph : construit graphe temporaire
DependanceBuilder ..> DependanceAffichage : produit
TacheDetailForm --> TacheService : ModifierTache()

DependanceAffichage --> Tache : référence
DependanceAffichage --> EtatDependance : utilise
Tache --> TypeActivite : utilise

note right of DependanceBuilder::ConstruireGrapheBloc
  <b>Source de Vérité:</b> Graphe réel du bloc
  basé sur Dependencies existantes
end note

note right of DependanceBuilder::FiltrerCandidatsValides
  <b>Anti-Cycles Robuste:</b> Exclut successeurs
  de la tâche (règle mathématique infaillible)
end note

note right of DependanceBuilder::AppliquerSuggestionsMetier  
  <b>Gestion Exclusions:</b> Filtre tâches exclues
  avant suggestions (Cas Particulier 2)
end note

note right of DependanceBuilder::TrouverMeilleuresTachesPourSuggestion
  <b>Priorités:</b> Jalons > Fins de chaîne > Toutes
  Si fin chaîne exclue → remonte automatiquement
end note

note right of TacheDetailForm
  <b>États d'affichage avec icônes:</b>
  Stricte: ✅ + coché + gras
  Exclue: ❌ + décoché + barré
  Suggérée: 💡 + coché + italique
  Neutre: ⚪ + décoché + normal
  
  <b>Infobulles:</b> ID, métier, durée, état
  sur survol des dépendances
end note

@enduml